--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "start": "node apps/backend/dist/main",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "docker:up": "docker-compose build && docker compose up -d",
+    "docker:down": "docker compose down"
   },
   "workspaces": [
     "apps/*"
