--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.8"
 
 services:
+  # rabbitmq:
+  #   image: rabbitmq:3-management
+  #   container_name: api-monitoring-rabbitmq
+  #   hostname: rabbitmq
+  #   volumes:
+  #     - ./data/rabbitmq:/var/lib/rabbitmq
+  #   ports:
+  #     - "5672:5672"
+  #     - "15672:15672"
+  #   env_file:
+  #     - .env
+
   redis:
     image: redis:latest
     container_name: api-monitoring-redis
