--- a/package.json
+++ b/package.json
@@ -2,19 +2,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
-    "husky": "^8.0.3",
-    "turbo": "^1.9.6"
+    "husky": "^8.0.3"
   },
   "scripts": {
-    "test": "turbo run test",
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "start": "node apps/backend/dist/main",
     "prepare": "husky install",
     "docker:up": "docker-compose build && docker compose up -d",
     "docker:down": "docker compose down"
-  },
-  "workspaces": [
-    "apps/*"
-  ]
+  }
 }
