refactor: changes to turborepo

--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   },
   "scripts": {
     "test": "turbo run test",
-    "dev": "turbo run dev",
     "build": "turbo run build",
+    "start:dev": "turbo run start:dev  --no-cache  --continue",
     "start": "node apps/backend/dist/main",
     "prepare": "husky install",
-    "docker:up": "docker-compose build && docker compose up -d",
-    "docker:down": "docker compose down"
+    "env:up": "docker-compose build && docker compose up -d",
+    "env:down": "docker-compose down"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "packages/*"
   ]
 }
