--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,21 @@
 {
   "$schema": "https://turborepo.org/schema.json",
   "pipeline": {
-    "dev": {
-      "cache": false
+    "test": {
+      "outputs": ["coverage/**"],
+      "dependsOn": []
     },
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"]
+    },
+    "start:dev": {
+      "dependsOn": ["^build"],
+      "cache": false,
+      "persistent": true
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
